<resources>
    <string name="app_name">Calculator Project V2</string>
    <string name="press_to_play">Press to play!</string>
    <string name="display">Display</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="goal">Goal:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">×</string>
    <string name="divide">÷</string>
    <string name="testbutton">testButton</string>
    <string name="welcome_to_calculator_the_puzzle">Welcome to Calculator the Puzzle</string>
    <string name="next">Next ➤</string>
    <string name="level_1">Level: 1</string>
    <string name="_0">0</string>
    <string name="exponent">exponent</string>
    <string name="power">^</string>
    <string name="mystery">\?</string>
    <string name="clicks_left">Clicks Left:</string>
    <string name="clear">Clear</string>
    <string name="go">=</string>
    <string name="delete">Delete</string>
    <string name="constraint">Constraint</string>
    <string name="operation_limit">Operation Limit:</string>
    <string name="single_player">Single Player</string>
    <string name="pick_a_game_mode">Pick a Game Mode:</string>
    <string name="single_player_mode">Single Player Mode</string>
    <string name="competitive_mode">Competitive Mode</string>
    <string name="collaborative_mode">Collaborative Mode</string>

    <!-- This is just copy-pasted from the repo -->
    <string name="error_missing_permissions">Cannot start without required permissions</string>

    <string name="codename">Your codename: %s</string>
    <string name="opponent_name">Opponent: %s</string>
    <string name="no_opponent">none (yet)</string>

    <string name="status_disconnected">Disconnected</string>
    <string name="status_searching">Searching</string>
    <string name="status_connected">Connected</string>

    <string name="game_choice">You chose %s</string>

    <string name="win_message">%1$s beats %2$s!</string>
    <string name="tie_message">You both chose %s</string>
    <string name="loss_message">%1$s loses to %2$s…</string>

    <string name="action_find_opponents">Find opponent</string>
    <string name="action_disconnect">Disconnect</string>

    <string name="game_score">%1$d : %2$d</string>
    <string name="treasure_chest">Treasure Chest:</string>
    <string name="point_count">Points:</string>
    <string name="freeze_timer_50_pts">Freeze Timer - 50 pts</string>
    <string name="double_points_earned_100_pts">Double Points Earned - 100 pts</string>
    <string name="add_an_extra_click_20_pts">Add an Extra Click - 20 pts</string>
    <string name="exit">Exit</string>
    <string name="use_double_points_powerup">Use double points powerup?</string>

    <string name="toast_connected">Connected to %s</string>
    <string name="toast_disconnected">Disconnected from %s</string>

    <string name="status_unknown">Please wait</string>
    <string name="status_advertising">Advertising</string>
    <string name="status_discovering">Have one person shake their device. Everyone else, stand still.</string>
    <string name="skip">Skip ➤➤</string>
    <string name="game_score_txy">Game Score:</string>
    <string name="game_ended">GAME ENDED</string>
    <string name="high_score">High Score:</string>
    <string name="replay_single_player_mode">Replay (single-player mode)</string>
    <string name="replay">Replay</string>
</resources>
