<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LevelOneActivity">

    <!-- Display of the Numbers ^^-->

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203" />

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_1"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />


    <TextView
        android:id="@+id/goalDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/clicksLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clicks Left:"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <!-- Button Zero ^^-->

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="436dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_0"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_1"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Button One ^^-->

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_2"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/buttonOne"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Button Two ^^-->

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_3"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Button Three ^^-->

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_4"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

    <!--Button Four ^^-->

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_5"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/buttonFour"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />

    <!--Button Five ^^-->

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_6"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonFive"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

    <!--Button Six ^^-->

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_7"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour"
        app:layout_constraintVertical_bias="0.006" />

    <!--Button Seven ^^-->

    <!--Button Eight ^^-->

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_8"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven"
        app:layout_constraintTop_toBottomOf="@+id/buttonFive"
        app:layout_constraintVertical_bias="0.042" />

    <!--Button Nine ^^-->

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_9"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/buttonEight"
        app:layout_constraintTop_toBottomOf="@+id/buttonSix"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/additionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/plus"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/subtractionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/minus"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSix"
        app:layout_constraintTop_toBottomOf="@+id/additionButton" />

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/times"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/divisionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNine"
        app:layout_constraintTop_toBottomOf="@+id/subtractionButton" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/divide"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionButton"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/exponentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/power"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="112dp"
        android:background="@drawable/calculator_custom_button"
        android:text="Go!"
        android:textColor="#FFA500"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>