<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LevelOneActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:background="@drawable/rectangle_border"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/level_1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/goalDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clicksLeft" />

    <TextView
        android:id="@+id/goalDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/goal"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/operationDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelLabel" />

    <ProgressBar
        android:id="@+id/timerBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clicksLeft"/>

    <TextView
        android:id="@+id/clicksLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/clicks_left"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/levelLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timerBar" />
    <!-- Display of the Numbers ^^-->

    <!-- BEGIN_BUTTON_START -->

    <!--Button Zero ^^-->

    <!--Button One ^^-->

    <TextView
        android:id="@+id/operationDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/operation_limit"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/operationList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalDisplay"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/operationList"
        android:name="com.example.calculatorprojectv2.LevelOneActivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operationDisplay"
        tools:context=".ManagerFragment">

    </androidx.recyclerview.widget.RecyclerView>

    <!--Button Two ^^-->

    <Button
        android:id="@+id/button_2"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_2"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <!--Button Three ^^-->

    <!--Button Four ^^-->

    <Button
        android:id="@+id/button_3"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_3"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_4"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_1"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_7"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <!--Button Five ^^-->

    <Button
        android:id="@+id/button_0"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_0"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_5"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <!--Button Six ^^-->

    <!-- Button Seven ^^-->

    <Button
        android:id="@+id/button_6"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_6"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <!-- Button 8 ^^-->

    <Button
        android:id="@+id/button_8"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_8"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <!-- Button Nine ^^-->

    <Button
        android:id="@+id/button_9"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="@string/_9"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <Button
        android:id="@+id/additionButton"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_design_new"
        android:text="@string/plus"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <Button
        android:id="@+id/subtractionButton"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_design_new"
        android:text="@string/minus"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionButton" />

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_design_new"
        android:text="@string/times"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtractionButton" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_design_new"
        android:text="@string/divide"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton" />

    <Button
        android:id="@+id/mysteryButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_design_new"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/exponentButton"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="CLR"
        android:textColor="#BDBDBD"
        android:textSize="15sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design_new"
        android:text="DEL"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/clearButton"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/exponentButton"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_design_new"
        android:text="@string/power"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divisionButton" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/button_design_new"
        android:text="@string/go"
        android:textColor="#BDBDBD"
        android:textSize="25sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/exponentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />

    <ImageView
        android:id="@+id/clickImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clicksLeft"
        app:srcCompat="@drawable/click_icon" />

    <ImageView
        android:id="@+id/freezeImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickImage"
        app:srcCompat="@drawable/freeze_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>