<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameTypeActivity">

    <TextView
        android:id="@+id/prizeType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/treasure_chest"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/pointCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/point_count"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/doublePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/double_points_earned_100_pts"
        android:background="@drawable/calculator_custom_button"
        android:textColor="#FFA500"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prizeType" />

    <Button
        android:id="@+id/freezeTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/freeze_timer_50_pts"
        android:background="@drawable/calculator_custom_button"
        android:textColor="#FFA500"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doublePoints" />

    <Button
        android:id="@+id/addClicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/calculator_custom_button"
        android:textColor="#FFA500"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        android:text="@string/add_an_extra_click_20_pts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freezeTimer" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/exit"
        android:textColor="#FFA500"
        android:textSize="15sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/prizeType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>